--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,16 @@ services:
       - ./.env
     volumes:
       - postgres-db:/var/lib/postgresql/data
+  
+  web_app:
+    build: ./
+    container_name: web_app
+    ports:
+      - 80:8000
+    command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+    env_file:
+      - ./.env
+    
 volumes:
   postgres-db:
 
